Fix spacing of dogs

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -257,8 +257,10 @@ aside {
   list-style: none;
   margin: 10px 0 0 0;
 
+
   li {
     padding: 0 0 3px 0;
+    clear: both;
   }
 }
 
